micro-member-service/stage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-member-service-stage-internal
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "micro-member-service-stage"
    alb.ingress.kubernetes.io/scheme: "internal"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: micro-member-service-stage
                port:
                  name: http
